Adding Author of this app.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,5 +17,10 @@
     <body>
         <!-- This syntax is how we will insert our Flask code into the webpage.-->
         {% block body %}{% endblock %}
+
+        <footer>
+            <p>Copyright &copy; Jake Rieger</p>
+            <p>Youtube: <a href="https://www.youtube.com/channel/UC0np-tFaO8GPJuIKZhwnQxg">Channel</a></p>
+        </footer>
     </body>
 </html>
