Added Video sources as well.

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,10 @@
         <!-- This syntax is how we will insert our Flask code into the webpage.-->
         {% block body %}{% endblock %}
 
-        <footer>
+        <footer style="text-align: center">
             <p>Copyright &copy; Jake Rieger</p>
             <p>Youtube: <a href="https://www.youtube.com/channel/UC0np-tFaO8GPJuIKZhwnQxg">Channel</a></p>
+            <p>FreeCodeCamp source: <a href="https://youtu.be/Z1RJmh_OqeA">Video</a></p>
         </footer>
     </body>
 </html>
